# MapReduce

./: .gitignore  .hgignore  README.md
.hg/: dirstate  last-message.txt  undo.backup.dirstate  undo.dirstate
.hg/cache/: branch2-served  rbc-revs-v1  tags2-visible
.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo  undo.backup.fncache
.hg/store/data/: _l_i_c_e_n_s_e.i  _r_e_a_d_m_e.md.i  ~2ehgignore.i
.hg/store/data/api/python/: _worker.py.i  impl.py.i  internal__pb2.py.i  internal__pb2__grpc.py.i
.hg/store/data/docs/: _makefile.i  ausarbeitung.md.i  ausarbeitung.pdf.i  ausarbeitung.tex.i  images.md.i  main.aux.i  main.blg.i  main.log.i  main.pdf.i  main.synctex.gz.i  main.tex.i  main.toc.i
.hg/store/data/docs/_te_x__files/: chapter01.aux.i  chapter01.tex.i  chapter02.aux.i  chapter02.tex.i
.hg/store/data/docs/_u_m_ls/: class__diagram__master.puml.i  class__diagram__node.puml.i  sequence__diag.puml.i  sequence__diagram.puml.i
.hg/store/data/docs/compiled__umls/: _map _phase.i  _master _class _diagram.i  _sequence_diagram.png.i  class__diagram__master.i  class__diagram__node.i  classdiagram.i  sequence__diagram.i
.hg/store/data/docs/images/: _phases.png.i  class__diagram__master.png.i  class__diagram__node.png.i  sequence__diagram.png.i
.hg/store/data/server/: _r_e_a_d_m_e.md.i  compile__commands.json.i  internal__pb2.py.i  internal__pb2__grpc.py.i  meson__options.txt.i
.hg/store/data/server/example__data/: job.json.i  shakespeare.txt.i  word__count.py.i
.hg/store/data/server/example__data/tmp/: _map_reduce.py.i  _worker.py.i  internal__pb2.py.i  internal__pb2__grpc.py.i
.hg/store/data/server/include/: _a_p_i_server.hpp.i  _c_l_i11.hpp.i  _f_i_f_o_scheduler.hpp.i  _job_tracker.hpp.i  _master.hpp.i  _node.hpp.i  _scheduler.hpp.i  _task.hpp.i  asio__protobuf__util.hpp.i  concurrentqueue.hpp.i  json.hpp.i  output.puml.i
.hg/store/data/server/src/: _a_p_i_server.cpp.i  _f_i_f_o_scheduler.cpp.i  _job_tracker.cpp.i  _master.cpp.i  _node.cpp.i  _scheduler.cpp.i  cli.cpp.i  dummy.proto.i  helloworld.proto.i  internal.proto.i  master.cpp.i  node.cpp.i  protobuf.cpp.i
.hg/store/data/server/src/protos/: _a_p_i.proto.i  internal.proto.i
.hg/store/data/tests/: _pseudo_code.py.i
api/python/: MapReduce.py  Worker.py  impl.py  impy.py  internal_pb2.py  internal_pb2_grpc.py
docs/: Makefile  ausarbeitung.aux  ausarbeitung.md  ausarbeitung.tex  images.md  main.blg  main.tex  main.toc
docs/TeX_files/: chapter01.aux  chapter01.tex
docs/UMLs/: class_diagram_master.puml  class_diagram_node.puml  map_phase.puml  reduce_phase.puml  sequence_diag.puml  sequence_diagram.puml
docs/compiled_umls/: Map Phase  MapReduce  Master Class Diagram  class_diagram_master  class_diagram_node  classdiagram
server/: README.md  compile_commands.json  internal_pb2.py  internal_pb2_grpc.py  meson.build  meson_options.txt
server/example_data/: job.json  word_count.py
server/example_data/tmp/: Worker.py  internal_pb2.py
server/include/: APIServer.hpp  FIFOScheduler.hpp  JobTracker.hpp  Master.hpp  Node.hpp  Scheduler.hpp  Task.hpp  asio_protobuf_util.hpp  output.puml
server/src/: APIServer.cpp  FIFOScheduler.cpp  JobTracker.cpp  Master.cpp  Node.cpp  Scheduler.cpp  cli.cpp  internal.proto  master.cpp  node.cpp  protobuf.cpp
server/src/protos/: API.proto  internal.proto
tests/: PseudoCode.py
